--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -1,29 +1,37 @@
-<h2>Sign up</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Please Sign In</h3>
+                </div>
+                <div class="panel-body">
+                  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                    <%= devise_error_messages! %>
+                        <form role="form">
+                          <fieldset>
+                              <div class="form-group">
+                                <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "E-mail", type:"email", autofocus: "autofocus" %>
+                              </div>
+                              <div class="form-group">
+                                  <% if @minimum_password_length %>
+                                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                                  <% end %><br />
+                                  <%= f.password_field :password, autocomplete: "off", autocomplete: "off", class: "form-control", placeholder: "Password", type: "password" %>
+                              </div>
+                              <div class="form-group">
+                                <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Password", type: "password" %>
+                              </div>
+                                <div class="form-group">
+                                <%= f.submit "Entrar" %>
+                                </div>
+                              <!-- Change this to a button or input when using this as a form -->
+                          </fieldset>
+                      </form>
+                  <% end %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "admins/shared/links" %>
