Confirgurações de autorizações com Pundit + Enum na role dos usuários

--- a/app/views/backoffice/admins/shared/_form.html.erb
+++ b/app/views/backoffice/admins/shared/_form.html.erb
@@ -1,4 +1,4 @@
-<h1 class="page-header">Admin</h1>
+<h1 class="page-header"><%= @admin.model_name.human %></h1>
 <div class="panel panel-default">
     <!-- /.panel-heading -->
     <% if @admin.errors.any? %>
