--- a/app/views/backoffice/admins/index.html.erb
+++ b/app/views/backoffice/admins/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="page-header">Admins</h1>
+<h1 class="page-header"><%= @admins.model_name.human(count:2) %></h1>
 
 <% if notice %>
     <div class="alert alert-success alert-dismissable">
@@ -10,8 +10,10 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         Todos os admins
-        <%= link_to new_backoffice_admin_path, class:'btn btn-success btn-circle pull-right', style:'margin-top: -5px' do %>
-            <i class="fa fa-plus"></i>
+        <% if policy(@admins).new? %>
+            <%= link_to new_backoffice_admin_path, class:'btn btn-success btn-circle pull-right', style:'margin-top: -5px' do %>
+                <i class="fa fa-plus"></i>
+            <% end %>
         <% end %>
     </div>
     <!-- /.panel-heading -->
@@ -20,9 +22,11 @@
             <table class="table table-striped table-bordered table-hover">
                 <thead>
                     <tr>
-                        <th>#</th>
-                        <th>Nome</th>
-                        <th>Email</th>
+                        <th><%= @admins.model.human_attribute_name('id') %></th>
+                        <th><%= @admins.model.human_attribute_name('name') %></th>
+                        <th><%= @admins.model.human_attribute_name('email') %></th>
+                        <th><%= @admins.model.human_attribute_name('role') %></th>
+                        <th></th>
                         <th></th>
                     </tr>
                 </thead>
@@ -32,6 +36,7 @@
                         <td><%= admin.id %></td>
                         <td><%= admin.name %></td>
                         <td><%= admin.email %></td>
+                        <td><%= admin.role_i18n %></td>
                         <td style="width: 150px"> 
                             <%= link_to edit_backoffice_admin_path(admin), class:"btn btn-primary btn-circle" do %>
                             <i class="fa fa-edit"></i>
@@ -39,7 +44,7 @@
                         </td>
                         <td>
                         <% if current_admin.id != admin.id %>
-                            <%= link_to backoffice_admin_path(admin), method: :delete, class:"btn btn-danger btn-circle", data: {confirm: "Você desejá mesmo excluir <b>#{admin.email}</b>?" } do%>
+                            <%= link_to backoffice_admin_path(admin), method: :delete, class:"btn btn-danger btn-circle", data: {confirm: t('messages.confirm_with', item: admin.name) } do%>
                                     <i class="fa fa-minus"></i>
                             <% end %>
                         <% else %>
