--- a/app/views/backoffice/categories/index.html.erb
+++ b/app/views/backoffice/categories/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="page-header">Categorias</h1>
+<h1 class="page-header"><%= @categories.model_name.human(count:2) %></h1>
 
 <% if notice %>
     <div class="alert alert-success alert-dismissable">
@@ -20,8 +20,8 @@
             <table class="table table-striped table-bordered table-hover">
                 <thead>
                     <tr>
-                        <th>#</th>
-                        <th>Descrição</th>
+                        <th><%= @categories.model.human_attribute_name('id') %></th>
+                        <th><%= @categories.model.human_attribute_name('description') %></th>
                         <th></th>
                         <th></th>
                     </tr>
