--- a/app/views/backoffice/categories/shared/_form.html.erb
+++ b/app/views/backoffice/categories/shared/_form.html.erb
@@ -1,4 +1,4 @@
-<h1 class="page-header">Categorias</h1>
+<h1 class="page-header"><%= @category.model_name.human %></h1>
 <div class="panel panel-default">
     <div class="panel-heading">
         <%= action %>
