--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -11,11 +11,11 @@
 
     <title>EscamboApp - Admin</title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag    'backoffice', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= stylesheet_link_tag    'backoffice', media: 'all' %>
       
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'backoffice', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'backoffice' %>
     <%= csrf_meta_tags %>
 
 
@@ -47,6 +47,12 @@
         <!-- /#page-wrapper -->
     </div>
     <!-- /#wrapper -->
+
+    <% if alert %>
+        <script>
+            $.notify("<%= alert %>","error")
+        </script>
+    <% end -%>
 
 </body>
 
