--- a/app/views/layouts/site_shared/_navigation.html.erb
+++ b/app/views/layouts/site_shared/_navigation.html.erb
@@ -26,6 +26,9 @@
                         <a><%= current_member.email %></a>
                     </li>
                     <li>
+                        <%= link_to "Perfil", site_profile_dashboard_index_path %>
+                    </li>
+                    <li>
                         <%= link_to "Sair", destroy_member_session_path, method: :delete %>
                     </li>
                 <% end %>
