--- a/app/views/site/profile/ads/index.html.erb
+++ b/app/views/site/profile/ads/index.html.erb
@@ -7,6 +7,7 @@
     <th>Titulo</th>
     <th>Categoria</th>
     <th>Preço</th>
+    <th></th>
   </thead>
   <tbody>
     <% @ads.each do |ad| %>
@@ -16,6 +17,7 @@
       <td><%= ad.title %></td>
       <td><%= ad.category.description %></td>
       <td><%= humanized_money_with_symbol ad.price %></td>
+      <td><%= link_to "Editar", edit_site_profile_ad_path(ad), class: 'btn btn-primary btn-sm' %></td>
     </tr>
     <% end %>
   </tbody>
