Alterando rotas do devise - Configurando anuncios de membros new/edit - Criando página de detalhes de produtos

--- a/app/views/site/profile/ads/index.html.erb
+++ b/app/views/site/profile/ads/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Meus anúncios</h1>
 
+<%= render partial: 'layouts/shared/notifications' %>
+
 <table class="table table-hover">
   <thead>
     <th>#</th>
