--- a/app/views/backoffice/admins/index.html.erb
+++ b/app/views/backoffice/admins/index.html.erb
@@ -1,11 +1,6 @@
 <h1 class="page-header"><%= @admins.model_name.human(count:2) %></h1>
 
-<% if notice %>
-    <div class="alert alert-success alert-dismissable">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-        <%= notice %>
-    </div>
-<% end -%>
+<%= render partial: 'layouts/shared/notifications' %>
 
 <div class="panel panel-default">
     <div class="panel-heading">
