--- a/app/views/backoffice/dashboard/index.html.erb
+++ b/app/views/backoffice/dashboard/index.html.erb
@@ -1,7 +1,3 @@
 <h1 class="page-header">Dashboard</h1>
 
-<% if notice %>
-    <script>
-        $.notify("<%= notice %>","success");
-    </script>
-<% end -%>
+<%= render partial: 'layouts/shared/notifications' %>
