--- a/app/views/layouts/profile.html.erb
+++ b/app/views/layouts/profile.html.erb
@@ -49,6 +49,9 @@
                     <li>
                         <%= link_to "Meus anúncios", site_profile_ads_path %>
                     </li>
+                    <li>
+                        <%= link_to "Criar anúncios", new_site_profile_ad_path %>
+                    </li>
                 </ul>
             </div>
             <!-- /#sidebar-wrapper -->
