--- a/app/views/layouts/backoffice_shared/_navigation.html.erb
+++ b/app/views/layouts/backoffice_shared/_navigation.html.erb
@@ -7,7 +7,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="index.html">EscamboApp Admin</a>
+    <a class="navbar-brand" href="index.html"></a>
+    <%= link_to "EscamboApp Admin", backoffice_dashboard_path, class: "navbar-brand" %>
 </div>
 <!-- /.navbar-header -->
 
