--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -29,8 +29,13 @@
 </head>
 
 <body>
+    <div id="global-spin" class="loading" style="display: none">Loading&#8230;</div>
     <%= render partial: "layouts/site_shared/navigation"  %>
-    <%= yield %>
+    <div class="container">
+        <div class="row">
+            <%= yield %>
+        </div>
+    </div>
     <%= render partial: "layouts/site_shared/footer" %>
 </body>
 
