--- a/app/views/site/categories/show.html.erb
+++ b/app/views/site/categories/show.html.erb
@@ -7,9 +7,11 @@
 
         <div id="home-detail" class="col-xs-9">
 
-            <%= render partial: 'site/shared/carousel' %>
-
             <div class="row">
+                
+                <div class="well">
+                  <h4><%= @ads.first.category.description %></h4>
+                </div>
 
                 <%= render partial: 'site/shared/ads' %>
 
