--- a/app/views/site/profile/ads/shared/_form.html.erb
+++ b/app/views/site/profile/ads/shared/_form.html.erb
@@ -10,55 +10,78 @@
         </div>
     <% end %>
 
-<div class="col-xs-4">
   <%= form_for([:site,:profile, @ad], html: {multipart: true}) do |f| %>
-    <div class="form-group">
-      <%= f.label :title %>
-      <%= f.text_field :title, class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :category %>
-      <%= f.collection_select :category_id, Category.all, :id, :description, {}, {class: 'form-control'} %>
-    </div>
-
-    <div class="form-group">
-        <%= f.label :price %>
-      <div class="input-group">
-        <span class="input-group-addon"><%= @ad.price.currency.symbol %></span>
-        <%= f.text_field :price, class: 'form-control' %>
+ 
+    <div class="row">
+      <div class="col-xs-6">
+        <div class="form-group">
+          <%= f.label :title %>
+          <%= f.text_field :title, class: "form-control", placeholder: "Título" %>
+        </div>
       </div>
     </div>
 
-    <div class="form-group">
-        <%= f.label :finish_date %>
-        <%= f.date_field :finish_date, class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :picture %> <br>
-      <% if @ad.picture.present? %>
-        <%= image_tag @ad.picture(:medium), class: 'img-thumbnail' %>
-      <% end %>
-      <%= f.file_field :picture %>
-    </div>
-
-</div>
-<div class="col-xs-12">
-    <div class="form-group">
-      <%= f.label :description %>
-      <%= f.text_area :description, class: "form-control", rows: 20 %>
-    </div>
-
-    <dib class="panel panel-primary">
-      <div class="panel-heading">
-        Pré-Visualização
+    <div class="row">
+      <div class="col-xs-4">
+        <div class="form-group">
+          <%= f.label :category %>
+          <%= f.collection_select :category_id, Category.all, :id, :description, {}, { class: "form-control" } %>
+        </div>
       </div>
-      <div class="panel-body">
-        <%= md_to_html(@ad.description) %>
-      </div>
-    </dib>
+    </div>
 
-    <%= submit_tag "Enviar", class: 'btn btn-default' %>
+    <div class="row">
+      <div class="col-xs-2">
+        <div class="form-group">
+          <%= f.label :price %>
+          <div class="input-group">
+            <div class="input-group-addon"><%= @ad.price.currency.symbol %></div>
+              <%= f.text_field :price, class: "form-control", placeholder: "Título" %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-3">
+        <div class="form-group">
+          <%= f.label :finish_date %>
+          <%= f.text_field :finish_date, class: "form-control datepicker", value: (l(@ad.finish_date) unless @ad.finish_date.blank?) %>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-6">
+        <div class="form-group">
+          <%= f.label :picture %> <br>
+          <% if @ad.picture.present? %>
+            <%= image_tag @ad.picture(:medium), class: "img-thumbnail" %>
+          <% end %>
+          <%= f.file_field :picture, class: "btn" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="form-group">
+          <%= f.label :description_short %>
+          <%= f.text_area :description_short, class: "form-control", rows: 5 %>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="form-group">
+          <%= f.label :description_md %>
+          <%= f.text_area :description_md, class: "form-control", rows: 10, data: { provide: 'markdown' } %>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12">
+      <%= submit_tag "Enviar", class: 'btn btn-default' %>
+    </div>
   <% end %>
-</div>
