Configuração de comentários a os anúncios + gem Ratyrate

--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -13,18 +13,6 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= stylesheet_link_tag    'site', media: 'all' %>
-      
-    <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag 'site' %>
-    <%= csrf_meta_tags %>
-
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -32,11 +20,64 @@
     <div id="global-spin" class="loading" style="display: none">Loading&#8230;</div>
     <%= render partial: "layouts/site_shared/navigation"  %>
     <div class="container">
+<!-- Page Content -->
+    <div class="container">
+
+    <%= form_tag site_search_path, method: :get do %>
+            <div class="row">
+                <div class="well well-sm">
+                    <div class="row">
+
+                    <div class="col-xs-3"></div>
+
+                      <div class="col-xs-6">
+                        <div class="input-group">
+
+                          <%= text_field_tag(:q, params[:q], { class: "form-control", placeholder: "Pesquisar por..." }) %>
+
+                          <span class="input-group-btn">
+                            <%= submit_tag("Pesquisar", class: "btn btn-default") %>
+                          </span>
+
+                        </div><!-- /input-group -->
+                      </div><!-- /.col-xs-6 -->
+
+                    <div class="col-xs-3"></div>
+
+
+                    </div><!-- /.row -->
+                </div>
+            </div>
+        <% end %>
+
         <div class="row">
-            <%= yield %>
+
+        <%= render partial: 'layouts/site_shared/sidebar' %>
+
+            <div id="home-detail" class="col-xs-9">
+
+                <% if controller_path == 'site/home' %>
+                    <%= render partial: 'layouts/site_shared/carousel' %>
+                <% end %>
+                <div class="row">
+
+                    <%= yield%>
+
+                </div>
+
+            </div>
+
         </div>
+
     </div>
+
     <%= render partial: "layouts/site_shared/footer" %>
+
+    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'site' %>
+    <%= csrf_meta_tags %>
+
+    <%= render partial: 'layouts/shared/notifications' %>
 </body>
 
 </html>
