--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -2,6 +2,14 @@
 *= require bootstrap
 */
 
+div.star img, star{
+  width: 18px;
+  text-align: center;
+}
+
+.ratings{
+    padding: 5px;
+}
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
@@ -21,7 +29,7 @@ body {
 }
 
 .caption {
-    height: 130px;
+    height: 100px;
     overflow: hidden;
 }
 
