--- a/app/views/layouts/backoffice_shared/_navigation.html.erb
+++ b/app/views/layouts/backoffice_shared/_navigation.html.erb
@@ -52,6 +52,13 @@
                     <i class="fa fa-users fa-fw"></i> Administradores
                 <% end %>
                 </li>
+
+                <li>
+                <%= link_to backoffice_diagrams_path do %>
+                    <i class="fa fa-database fa-fw"></i> Diagrama ER
+                <% end %>
+                </li>
+
             </ul>
         </div>
         <!-- /.sidebar-collapse -->
