--- a/app/views/layouts/profile.html.erb
+++ b/app/views/layouts/profile.html.erb
@@ -52,6 +52,9 @@
                     <li>
                         <%= link_to "Criar anúncios", new_site_profile_ad_path %>
                     </li>
+                    <li>
+                        <%= link_to "Meus dados", edit_site_profile_my_datum_path(current_member.id) %>
+                    </li>
                 </ul>
             </div>
             <!-- /#sidebar-wrapper -->
