--- a/app/views/layouts/site_shared/_navigation.html.erb
+++ b/app/views/layouts/site_shared/_navigation.html.erb
@@ -11,6 +11,22 @@
             </button>
             <%= link_to t('app.name'), root_path, class: "navbar-brand" %>
         </div>
+
+        <%= form_tag site_search_path, method: :get do %>
+
+           <div class=" col-xs-offset-2 col-xs-6 pull-center search">
+            <div class="input-group">
+
+              <%= text_field_tag(:q, params[:q], { class: "form-control", placeholder: "Pesquisar por..." }) %>
+
+              <span class="input-group-btn">
+                <%= submit_tag("Pesquisar", class: "btn btn-info") %>
+              </span>
+
+            </div><!-- /input-group -->
+          </div><!-- /.col-xs-6 -->
+        <% end %>
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav pull-right">
