--- a/app/views/members/passwords/edit.html.erb
+++ b/app/views/members/passwords/edit.html.erb
@@ -1,25 +1,49 @@
-<h2>Change your password</h2>
+<div class="container">    
+    <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
+        <div class="panel panel-info" >
+            <div class="panel-heading">
+                <div class="panel-title">Redefinir senha</div>
+                <div style="float:right; font-size: 80%; position: relative; top:-10px">
+                </div>
+            </div>     
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+            <div style="padding-top:30px" class="panel-body" >
+                <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {class: 'form-horizontal', method: :put}) do |f| %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
+                    <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <%= f.password_field :password, autofocus: true, class: 'form-control', placeholder: 'Senha' %>
+                    </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirmar Senha' %>
+                    </div>
+
+                    <div style="margin-top:10px" class="form-group">
+                        <!-- Button -->
+                        <div class="col-sm-12 controls">
+                            <%= f.submit "Mudar senha", class: 'btn btn-success' %>
+                        </div>
+                    </div>   
+
+                <% end %>
+            </div>
+        </div>
+    </div> 
+</div>  
+
+<% flash.each do |key, value| %>
+      <%= javascript_tag "$.notify ({ message: '#{value}' } , { type: 'danger',
+      placement: { from: 'top', align: 'center' }});" %>
 <% end %>
 
-<%= render "members/shared/links" %>
+
+<% unless devise_error_messages!.blank? %>
+    <% resource.errors.full_messages.each do |erro| %>
+        <%= javascript_tag "$.notify ({ message: '#{erro}' } , { type: 'danger',
+            placement: { from: 'top', align: 'center' }});" %>
+    <% end %>
+<% end -%>
