--- a/app/views/members/registrations/new.html.erb
+++ b/app/views/members/registrations/new.html.erb
@@ -1,117 +1,1 @@
- <div class="container">    
-    <div id="loginbox" style="display:none; margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
-        <div class="panel panel-info" >
-            <div class="panel-heading">
-                <div class="panel-title">Sign In</div>
-            </div>     
-
-            <div style="padding-top:30px" class="panel-body" >
-                <%= form_for(resource, as: resource_name, url: session_path(resource_name), html: {class: 'form-horizontal'}) do |f| %>
-
-                    <div style="margin-bottom: 25px" class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-                    </div>
-                        
-                    <div style="margin-bottom: 25px" class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                        <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-                    </div>
-                        
-                    <div class="input-group">
-                      <div class="checkbox">
-                        <label>
-                          <%= f.check_box :remember_me %> Remember me
-                        </label>
-                      </div>
-                    </div>
-
-                    <div style="margin-top:10px" class="form-group">
-                        <!-- Button -->
-                        <div class="col-sm-12 controls">
-                            <%= f.submit "Log in", class: 'btn btn-success' %>
-                          <a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a>
-                        </div>
-
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12 control">
-                            <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
-                                Don't have an account! 
-                            <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
-                                Sign Up Here
-                            </a>
-                            </div>
-                        </div>
-                    </div>    
-                <% end %>
-            </div>
-        </div>
-    </div> 
-    <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-        <div class="panel panel-info">
-            <div class="panel-heading">
-                <div class="panel-title">Sign Up</div>
-                <div style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink" href="#" onclick="$('#signupbox').hide(); $('#loginbox').show()">Sign In</a></div>
-            </div>  
-            <div class="panel-body" >
-                <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html: { class: 'form-horizontal' }) do |f| %>
-  
-                    <% unless devise_error_messages!.blank? %>
-                      <div id="signupalert", class="alert alert-danger">
-                          <p>Erros:</p>
-                          <span><%= devise_error_messages! %></span>
-                      </div>
-                    <% end -%>
-                    
-                      
-                    <div class="form-group">
-                        <label for="email" class="col-md-3 control-label">Email</label>
-                        <div class="col-md-9">
-                            <%= f.email_field :email, autofocus: true, class: "form-control" , placeholder: "Email" %>
-                        </div>
-                    </div>
-                        
-                    <div class="form-group">
-                        <label for="firstname" class="col-md-3 control-label">First Name</label>
-                        <div class="col-md-9">
-                            <input type="text" class="form-control" name="firstname" placeholder="First Name">
-                        </div>
-                    </div>
-
-
-                    <div class="form-group">
-                        <label for="password" class="col-md-3 control-label">Senha</label>
-                        <div class="col-md-9">
-                            <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Password" %>
-
-                        </div>
-                    </div>
-                        
-                    <div class="form-group">
-                        <label for="password" class="col-md-3 control-label">Confirme a senha</label>
-                        <div class="col-md-9">
-                            <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Password" %>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <!-- Button -->                                        
-                        <div class="col-md-offset-3 col-md-9">
-                                <%= f.submit "Entrar", class: 'btn btn-info' %>
-                        </div>
-                    </div>
-                    
-                    <div style="border-top: 1px solid #999; padding-top:20px"  class="form-group">
-                        
-                        <div class="col-md-offset-3 col-md-9">
-                            <button id="btn-fbsignup" type="button" class="btn btn-primary"><i class="icon-facebook"></i>   Sign Up with Facebook</button>
-                        </div>                                           
-                            
-                    </div>
-                    
-                <% end %>
-             </div>
-        </div>
-    </div> 
-</div>  
+<%= render partial: 'members/shared/form' %>
