--- a/app/views/site/shared/_ads.html.erb
+++ b/app/views/site/shared/_ads.html.erb
@@ -1,21 +1,26 @@
 <div class="row">
-    <% @ads.each do |ad| %>
-        <div class="col-sm-4 col-lg-4 col-md-4">
-            <div class="thumbnail">
-                <%= image_tag ad.picture.url(:medium) %>
-                <div class="caption">
-                    <h4 class="pull-right"><%= humanized_money_with_symbol ad.price %></h4>
-                    <h4>
-                        <%= link_to truncate(ad.title, length: 20), site_ad_detail_path(ad), remote: true, data: { push: :partial } %>
-                    </h4>
-                    <p><%= truncate(ad.description_short, length: 100) %></p>
-                </div>
-                <div class="ratings">
-                    <%= rating_for ad, 'quality' %>
+    <div class="col-xs-12">
+        <% @ads.each do |ad| %>
+            <div class="col-sm-4 col-lg-4 col-md-4">
+                <div class="thumbnail">
+                    <%= image_tag ad.picture.url(:medium) %>
+                    <div class="caption">
+                        <h4 class="pull-right"><%= humanized_money_with_symbol ad.price %></h4>
+                        <h4>
+                            <%= link_to truncate(ad.title, length: 20), site_ad_detail_path(ad), remote: true, data: { push: :partial } %>
+                        </h4>
+                        <p><%= truncate(ad.description_short, length: 100) %></p>
+                    </div>
+                    <div class="ratings">
+                        <p class="pull-right">
+                            <%= ad.rates('quality').count %> Avaliações
+                        </p>
+                        <%= rating_for ad, 'quality' %>
+                    </div>
                 </div>
             </div>
-        </div>
-    <% end %>
+        <% end %>
+    </div>
 </div>
 <div class="row">
     <div class="text-center">
