--- a/app/views/layouts/site_shared/_navigation.html.erb
+++ b/app/views/layouts/site_shared/_navigation.html.erb
@@ -11,20 +11,22 @@
             </button>
             <%= link_to t('app.name'), root_path, class: "navbar-brand" %>
         </div>
+        
+        <% unless controller_path.match('profile')  %>
+            <%= form_tag site_search_path, method: :get do %>
 
-        <%= form_tag site_search_path, method: :get do %>
+               <div class=" col-xs-offset-1 col-xs-6 pull-center search">
+                <div class="input-group">
 
-           <div class=" col-xs-offset-2 col-xs-6 pull-center search">
-            <div class="input-group">
+                  <%= text_field_tag(:q, params[:q], { class: "form-control", placeholder: "Pesquisar por..." }) %>
 
-              <%= text_field_tag(:q, params[:q], { class: "form-control", placeholder: "Pesquisar por..." }) %>
+                  <span class="input-group-btn">
+                    <%= submit_tag("Pesquisar", class: "btn btn-info") %>
+                  </span>
 
-              <span class="input-group-btn">
-                <%= submit_tag("Pesquisar", class: "btn btn-info") %>
-              </span>
-
-            </div><!-- /input-group -->
-          </div><!-- /.col-xs-6 -->
+                </div><!-- /input-group -->
+              </div><!-- /.col-xs-6 -->
+            <% end %>
         <% end %>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
